small styling changes; fixed alignment and padding around database;

--- a/admin/styles/more-info.css
+++ b/admin/styles/more-info.css
@@ -410,7 +410,7 @@ input[type="button"].selectedPhoto {
 }
 
 .photoDeleted {
-    opacity: .55;
+    opacity: .35;
     height: auto;
     display: inline-block;
     vertical-align: middle;
